--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,33 @@ body{
     border-radius: 5px;
     border: none;
 }
+.promo{
+    display: flex;
+    width: 70%;
+    margin: 100px auto;
+    align-items: center;
+}
+.publicidad h1{
+    color: #025157;
+   font-size: 32px;
+}
+.publicidad p{
+    color: #343434;
+    font-size: 20px;
+}
+.Video_expl{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Video_expl > img {
+    width: 150px;
+    margin-top: 10px;
+}
+.fixed-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fffbf7;
+  }
