--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,9 @@ figure.intro > img {
   padding: 30px 20px 40px 40px;
   flex: 2;
 }
-
+.Capture_icon{
+  padding-top: 50px !important;
+}
 .features .feature-card .feature-content > * {
   margin-bottom: 1rem;
   margin-top: 0;
@@ -590,99 +592,7 @@ figure.intro > img {
   font-weight: 500;
 }
 
-.cta {
-  padding: 5% 10% 0;
-  margin: 0;
-  max-width: unset;
-}
 
-.cta .box {
-  background-color: #025157;
-  color: #fff;
-  padding: 5%;
-  border-radius: 10px;
-}
-
-.cta .box h2 {
-  font-family: "Alegreya", serif;
-  font-size: 34px;
-  max-width: 340px;
-  line-height: 1.3;
-}
-
-.cta .box p {
-  color: #fff;
-  margin-top: 15px;
-  line-height: 25px;
-  font-weight: 400;
-  font-size: 17px;
-}
-
-.cta .box p > a {
-  color: #6abf4b;
-}
-
-.cta .box form input,
-.cta .box form button {
-  vertical-align: middle;
-}
-
-.cta .box form button {
-  background-color: #67b54b;
-}
-
-.cta .box form + p {
-  color: #b3cbcd;
-  margin-top: 15px;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.6;
-  max-width: 340px;
-}
-
-.footer {
-  padding: 5% 10% 2%;
-  margin: 0;
-  max-width: unset;
-}
-
-.footer p {
-  font-size: 16px;
-  color: #4a4a4a;
-}
-
-.footer h4 {
-  text-transform: uppercase;
-  color: #025157;
-  font-weight: 700;
-  font-size: 13px;
-  font-family: sans-serif;
-}
-
-.footer form input {
-  border-color: #025157;
-}
-
-.footer ul {
-  list-style: none;
-}
-
-.footer ul li {
-  margin-bottom: 20px;
-  font-size: 18px;
-}
-
-.footer ul li a {
-  color: #4a4a4a;
-}
-
-.footer .social {
-  margin-left: 28px;
-}
-
-.footer .social a {
-  margin-right: 20px;
-}
 
 @media (max-width: 575px) {
   main {
